# zoitechat-lite

./: README.md  meson.build
data/: net.zoite.ZoiteChatLite.desktop
libzoitechat/: meson.build
libzoitechat/include/zoitechat/: irc_message.h  zoitechat.h
libzoitechat/src/: irc_message.c  zoitechat.c
src/: meson.build
src/app/: chat_page.c  chat_page.c.bak  chat_page.h  chat_page.h.bak  main.c  settings.c  settings.h  ui.c  ui.c.bak  ui.h
src/app/resources/: resources.gresource.xml  style.css
